fix: update button alignment in sign-in component for improved layout

--- a/src/components/auth/signin/css/styles.module.css
+++ b/src/components/auth/signin/css/styles.module.css
@@ -70,6 +70,7 @@
 .buttons {
     padding: 2rem 0 0 0;
     width: 100%;
+    display: flex;
     justify-content: right;
 }
 .buttons button {
